--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,14 @@
           <artifactId>javafx-controls</artifactId>
           <version>17.0.2</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>sprint-boot-starter-jdbc</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <scope>runtime</scope>
+      </dependency>
   </dependencies>
 </project>
