--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             </configuration>
         </plugin>
         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.1.2</version>
+        </plugin>
+        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version> <!-- Możesz użyć najnowszej wersji pluginu -->
@@ -113,12 +118,13 @@
       </dependency>
       <dependency>
           <groupId>org.springframework.boot</groupId>
-          <artifactId>sprint-boot-starter-jdbc</artifactId>
+          <artifactId>spring-boot-starter-jdbc</artifactId>
+          <version>2.6.3</version>
       </dependency>
       <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
-          <scope>runtime</scope>
+          <version>8.0.33</version>
       </dependency>
   </dependencies>
 </project>
