--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,14 @@
             </properties>
         </profile>
     </profiles>
-  <dependencies>
+    <dependencies>
+        <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.36</version>
+    <scope>runtime</scope>
+</dependency>
+
         <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
